--- a/OHRMS/test-output/old/Suite/classes.html
+++ b/OHRMS/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.OHRMS.testcases.LoginPageTest</td>
+<td>com.OHRMS.testcasescripts.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -30,7 +30,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.OHRMS.testcases.HomePageTest</td>
+<td>com.OHRMS.testcasescripts.HomePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
